--- a/Polar/Editor.storyboard
+++ b/Polar/Editor.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Editor View Controller-->
+        <!--Filters View Controller-->
         <scene sceneID="ZdR-cO-Lig">
             <objects>
-                <viewController id="nZ8-ib-106" customClass="EditorViewController" customModule="Polar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="nZ8-ib-106" customClass="FiltersViewController" customModule="Polar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="eHP-8a-C7P"/>
                         <viewControllerLayoutGuide type="bottom" id="yvc-Uy-f2e"/>
