--- a/Polar/Editor.storyboard
+++ b/Polar/Editor.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Pq3-XN-RKI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Wec-8Y-1Cn">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -133,8 +133,104 @@
             </objects>
             <point key="canvasLocation" x="2642.4000000000001" y="137.18140929535232"/>
         </scene>
+        <!--Test Edit View Controller-->
+        <scene sceneID="BAi-oI-GI2">
+            <objects>
+                <viewController id="qnc-yf-ZPE" customClass="TestEditViewController" customModule="Polar" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QJn-sC-XUh"/>
+                        <viewControllerLayoutGuide type="bottom" id="mA2-yz-AGw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TyL-7E-Fw2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PYA-8z-Zs7">
+                                <rect key="frame" x="0.0" y="311" width="320" height="257"/>
+                                <subviews>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.10000000000000001" minValue="-2" maxValue="1" minimumValueImage="Bright" maximumValueImage="Bright" translatesAutoresizingMaskIntoConstraints="NO" id="pw0-WG-aVP">
+                                        <rect key="frame" x="45" y="8" width="243" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="ren-u2-zMk"/>
+                                        </constraints>
+                                        <color key="minimumTrackTintColor" red="0.18086128797558809" green="0.47992169932634421" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="maximumTrackTintColor" red="1" green="0.16438681591319193" blue="0.13233123932093338" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="changeBrightWith_sender:" destination="qnc-yf-ZPE" eventType="valueChanged" id="6KP-nB-7x7"/>
+                                        </connections>
+                                    </slider>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="-4" maxValue="4" minimumValueImage="Contrast" maximumValueImage="Contrast" translatesAutoresizingMaskIntoConstraints="NO" id="SvR-tq-yU1">
+                                        <rect key="frame" x="45" y="46" width="243" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="uKh-dp-2dc"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="changeContrastWith_sender:" destination="qnc-yf-ZPE" eventType="valueChanged" id="8Gv-z2-evV"/>
+                                        </connections>
+                                    </slider>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="aOY-r1-0VX">
+                                        <rect key="frame" x="45" y="84" width="243" height="31"/>
+                                        <connections>
+                                            <action selector="changeSaturationWith_sender:" destination="qnc-yf-ZPE" eventType="valueChanged" id="jpj-ns-1qG"/>
+                                        </connections>
+                                    </slider>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="SvR-tq-yU1" firstAttribute="leading" secondItem="PYA-8z-Zs7" secondAttribute="leading" constant="47" id="6Ba-hA-brh"/>
+                                    <constraint firstItem="pw0-WG-aVP" firstAttribute="leading" secondItem="PYA-8z-Zs7" secondAttribute="leading" constant="47" id="GHS-XF-LUb"/>
+                                    <constraint firstAttribute="trailing" secondItem="SvR-tq-yU1" secondAttribute="trailing" constant="34" id="U5j-ff-Ggj"/>
+                                    <constraint firstItem="SvR-tq-yU1" firstAttribute="trailing" secondItem="aOY-r1-0VX" secondAttribute="trailing" id="gJc-xz-XgR"/>
+                                    <constraint firstItem="SvR-tq-yU1" firstAttribute="top" secondItem="pw0-WG-aVP" secondAttribute="bottom" constant="8" id="jQx-ck-V2Q"/>
+                                    <constraint firstItem="aOY-r1-0VX" firstAttribute="top" secondItem="SvR-tq-yU1" secondAttribute="bottom" constant="8" symbolic="YES" id="lD3-7W-j30"/>
+                                    <constraint firstAttribute="trailing" secondItem="pw0-WG-aVP" secondAttribute="trailing" constant="34" id="lfh-CI-Fmj"/>
+                                    <constraint firstItem="pw0-WG-aVP" firstAttribute="top" secondItem="PYA-8z-Zs7" secondAttribute="top" constant="8" id="ouO-Mm-F9r"/>
+                                    <constraint firstItem="SvR-tq-yU1" firstAttribute="leading" secondItem="aOY-r1-0VX" secondAttribute="leading" id="r05-n6-TMf"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PYA-8z-Zs7" firstAttribute="top" secondItem="TyL-7E-Fw2" secondAttribute="top" constant="311" id="KeF-43-ZSl"/>
+                            <constraint firstAttribute="trailing" secondItem="PYA-8z-Zs7" secondAttribute="trailing" id="Lco-G7-1lj"/>
+                            <constraint firstItem="mA2-yz-AGw" firstAttribute="top" secondItem="PYA-8z-Zs7" secondAttribute="bottom" id="Nh9-b6-vB5"/>
+                            <constraint firstItem="PYA-8z-Zs7" firstAttribute="leading" secondItem="TyL-7E-Fw2" secondAttribute="leading" id="lpP-IZ-l2M"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="QX3-3U-2AV"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="brightSlider" destination="pw0-WG-aVP" id="CC3-dH-N21"/>
+                        <outlet property="contrastSlider" destination="SvR-tq-yU1" id="6dS-Pp-Jlm"/>
+                        <outlet property="saturSlider" destination="aOY-r1-0VX" id="ihX-Sl-cCB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k0a-Ls-iq7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5885.625" y="136.26760563380282"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fJ9-Ye-gsf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wec-8Y-1Cn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mtw-rT-DAz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qnc-yf-ZPE" kind="relationship" relationship="rootViewController" id="lfH-Fd-auG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Xv-6I-gqc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4886.25" y="135.21126760563379"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="Bright" width="25" height="25"/>
+        <image name="Contrast" width="25" height="25"/>
         <image name="presetImage" width="75" height="56"/>
     </resources>
 </document>
