--- a/Polar/Gallery.storyboard
+++ b/Polar/Gallery.storyboard
@@ -27,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="1759.2" y="144.3778110944528"/>
         </scene>
-        <!--View Controller-->
+        <!--Gallery View Controller-->
         <scene sceneID="jVP-GB-7uz">
             <objects>
-                <viewController id="bQZ-W3-aUQ" sceneMemberID="viewController">
+                <viewController id="bQZ-W3-aUQ" customClass="GalleryViewController" customModule="Polar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wDQ-VY-E3x"/>
                         <viewControllerLayoutGuide type="bottom" id="yfF-72-Xrr"/>
@@ -49,14 +49,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Xdp-NN-Hui" customClass="GalleryViewCell" customModule="Polar" customModuleProvider="target">
-                                        <rect key="frame" x="15" y="0.0" width="291" height="171"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PictureCell" id="Xdp-NN-Hui" customClass="GalleryViewCell" customModule="Polar">
+                                        <rect key="frame" x="14.5" y="0.0" width="291" height="171"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="291" height="171"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fF3-Sa-7ny">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fF3-Sa-7ny">
                                                     <rect key="frame" x="0.0" y="0.0" width="291" height="171"/>
                                                 </imageView>
                                             </subviews>
@@ -68,10 +68,14 @@
                                             <constraint firstItem="fF3-Sa-7ny" firstAttribute="top" secondItem="Xdp-NN-Hui" secondAttribute="top" id="uxU-8b-txF"/>
                                         </constraints>
                                         <connections>
-                                            <outlet property="pictureImageView" destination="fF3-Sa-7ny" id="OeU-ba-UJW"/>
+                                            <outlet property="pictureImageView" destination="fF3-Sa-7ny" id="UrI-pM-Iwy"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="bQZ-W3-aUQ" id="190-Yb-Fws"/>
+                                    <outlet property="delegate" destination="bQZ-W3-aUQ" id="ASP-1n-3TM"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -84,17 +88,36 @@
                     </view>
                     <navigationItem key="navigationItem" id="StO-7G-z6C">
                         <barButtonItem key="backBarButtonItem" title="назад" id="43v-Vd-MxP"/>
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="Kyy-9V-NBK">
+                        <barButtonItem key="leftBarButtonItem" title="Camera" id="N1z-zU-rjf">
+                            <connections>
+                                <action selector="showCameracontroller:" destination="bQZ-W3-aUQ" id="8dA-EJ-7bx"/>
+                                <segue destination="4yu-GN-LXv" kind="presentation" modalTransitionStyle="coverVertical" id="ecT-7K-lTS"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kyy-9V-NBK">
                             <connections>
                                 <segue destination="Yvq-NK-FNv" kind="push" splitViewControllerTargetIndex="1" id="U2R-lW-Tvy"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="addButton" destination="Kyy-9V-NBK" id="Xsr-TO-wc2"/>
+                        <outlet property="cameraButton" destination="N1z-zU-rjf" id="5td-RR-NVC"/>
+                        <outlet property="photoCollectionView" destination="bhP-BZ-mum" id="jiH-Qk-oMT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DR6-CT-GAK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2608.125" y="143.66197183098592"/>
+        </scene>
+        <!--CameraViewController-->
+        <scene sceneID="0Gk-L6-7JW">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="CameraViewController" storyboardName="Main" referencedIdentifier="CameraViewController" id="4yu-GN-LXv" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dcX-iF-m6g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3278" y="-479"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="0hL-ET-EMo">
