--- a/Polar/Gallery.storyboard
+++ b/Polar/Gallery.storyboard
@@ -85,14 +85,9 @@
                         <barButtonItem key="leftBarButtonItem" title="Camera" id="N1z-zU-rjf">
                             <connections>
                                 <action selector="showCameracontroller:" destination="bQZ-W3-aUQ" id="8dA-EJ-7bx"/>
-                                <segue destination="4yu-GN-LXv" kind="presentation" modalTransitionStyle="coverVertical" id="ecT-7K-lTS"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kyy-9V-NBK">
-                            <connections>
-                                <segue destination="Yvq-NK-FNv" kind="push" splitViewControllerTargetIndex="1" id="U2R-lW-Tvy"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kyy-9V-NBK"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
@@ -100,38 +95,20 @@
                         <outlet property="backgroundImageView" destination="YRQ-2S-O89" id="Qwc-ig-RLx"/>
                         <outlet property="cameraButton" destination="N1z-zU-rjf" id="5td-RR-NVC"/>
                         <outlet property="photoCollectionView" destination="bhP-BZ-mum" id="jiH-Qk-oMT"/>
+                        <segue destination="651-qi-6Tt" kind="showDetail" identifier="goToEditSegue" id="zab-au-5MV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DR6-CT-GAK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2608.125" y="143.66197183098592"/>
         </scene>
-        <!--CameraViewController-->
-        <scene sceneID="0Gk-L6-7JW">
+        <!--FiltersViewController-->
+        <scene sceneID="Z4m-Cp-9UB">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="CameraViewController" storyboardName="Main" referencedIdentifier="CameraViewController" id="4yu-GN-LXv" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dcX-iF-m6g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardIdentifier="FiltersViewController" storyboardName="Editor" referencedIdentifier="FiltersViewController" id="651-qi-6Tt" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ADq-gS-TLs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3278" y="-479"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="0hL-ET-EMo">
-            <objects>
-                <viewController id="Yvq-NK-FNv" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Fi1-qx-oqM"/>
-                        <viewControllerLayoutGuide type="bottom" id="6p5-5M-hFe"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="a4b-dJ-qkq">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ECE-ee-HX1"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="itX-yR-onp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3467" y="144"/>
+            <point key="canvasLocation" x="2610" y="593"/>
         </scene>
     </scenes>
 </document>
