--- a/Polar/Gallery.storyboard
+++ b/Polar/Gallery.storyboard
@@ -43,36 +43,74 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bhP-BZ-mum">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="87" width="320" height="481"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OjW-Y1-NEa">
-                                    <size key="itemSize" width="291" height="171"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="OjW-Y1-NEa">
+                                    <size key="itemSize" width="106" height="106"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="1" height="1"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PictureCell" id="Xdp-NN-Hui" customClass="GalleryViewCell" customModule="Polar">
-                                        <rect key="frame" x="15" y="0.0" width="291" height="171"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="291" height="171"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <size key="customSize" width="106" height="106"/>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U8Y-6S-nyt">
+                                    <rect key="frame" x="0.0" y="106" width="320" height="1"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="bQZ-W3-aUQ" id="190-Yb-Fws"/>
                                     <outlet property="delegate" destination="bQZ-W3-aUQ" id="ASP-1n-3TM"/>
                                 </connections>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dha-0I-Yjw">
+                                <rect key="frame" x="0.0" y="526" width="320" height="42"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUF-Kw-mdx">
+                                        <rect key="frame" x="252" y="8" width="28" height="30"/>
+                                        <state key="normal" image="Share Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Adt-Xq-1Gv">
+                                        <rect key="frame" x="150" y="8" width="21" height="28"/>
+                                        <state key="normal" image="Trash"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EyB-ml-t6p">
+                                        <rect key="frame" x="52" y="8" width="28" height="28"/>
+                                        <state key="normal" image="Filter Button"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="fUF-Kw-mdx" secondAttribute="trailing" constant="40" id="5Dj-XU-CYK"/>
+                                    <constraint firstItem="fUF-Kw-mdx" firstAttribute="leading" secondItem="Adt-Xq-1Gv" secondAttribute="trailing" constant="81" id="EkW-4P-f4V"/>
+                                    <constraint firstAttribute="bottom" secondItem="EyB-ml-t6p" secondAttribute="bottom" constant="6" id="L1I-Q4-Ipj"/>
+                                    <constraint firstItem="Adt-Xq-1Gv" firstAttribute="top" secondItem="Dha-0I-Yjw" secondAttribute="top" constant="8" id="NWC-Qx-KjL"/>
+                                    <constraint firstItem="fUF-Kw-mdx" firstAttribute="top" secondItem="Dha-0I-Yjw" secondAttribute="top" constant="8" id="ej8-Uq-ibj"/>
+                                    <constraint firstItem="EyB-ml-t6p" firstAttribute="top" secondItem="Dha-0I-Yjw" secondAttribute="top" constant="8" id="faJ-uu-AH0"/>
+                                    <constraint firstItem="EyB-ml-t6p" firstAttribute="leading" secondItem="Dha-0I-Yjw" secondAttribute="leading" constant="52" id="r4Q-Hm-e0L"/>
+                                    <constraint firstAttribute="bottom" secondItem="Adt-Xq-1Gv" secondAttribute="bottom" constant="6" id="uq3-M3-WrI"/>
+                                    <constraint firstItem="Adt-Xq-1Gv" firstAttribute="leading" secondItem="EyB-ml-t6p" secondAttribute="trailing" constant="70" id="vLg-C4-80w"/>
+                                    <constraint firstAttribute="bottom" secondItem="fUF-Kw-mdx" secondAttribute="bottom" constant="4" id="xjr-yZ-0dW"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Dha-0I-Yjw" secondAttribute="trailing" id="528-VB-Ou8"/>
                             <constraint firstItem="yfF-72-Xrr" firstAttribute="top" secondItem="bhP-BZ-mum" secondAttribute="bottom" id="EPD-rw-Vlz"/>
-                            <constraint firstItem="bhP-BZ-mum" firstAttribute="top" secondItem="zln-93-tNZ" secondAttribute="top" constant="64" id="G7p-XC-hma"/>
+                            <constraint firstItem="bhP-BZ-mum" firstAttribute="top" secondItem="zln-93-tNZ" secondAttribute="top" constant="87" id="G7p-XC-hma"/>
+                            <constraint firstItem="yfF-72-Xrr" firstAttribute="top" secondItem="Dha-0I-Yjw" secondAttribute="bottom" id="PNT-7s-f9r"/>
+                            <constraint firstItem="Dha-0I-Yjw" firstAttribute="leading" secondItem="zln-93-tNZ" secondAttribute="leading" id="UM0-dE-AqS"/>
                             <constraint firstItem="bhP-BZ-mum" firstAttribute="leading" secondItem="zln-93-tNZ" secondAttribute="leading" id="Yys-ji-rfc"/>
+                            <constraint firstItem="Dha-0I-Yjw" firstAttribute="top" secondItem="wDQ-VY-E3x" secondAttribute="bottom" constant="462" id="dAR-Kw-eun"/>
                             <constraint firstItem="YRQ-2S-O89" firstAttribute="top" secondItem="zln-93-tNZ" secondAttribute="top" id="gTO-mR-fZ3"/>
                             <constraint firstItem="yfF-72-Xrr" firstAttribute="top" secondItem="YRQ-2S-O89" secondAttribute="bottom" id="ghR-jk-qP7"/>
                             <constraint firstItem="YRQ-2S-O89" firstAttribute="leading" secondItem="zln-93-tNZ" secondAttribute="leading" id="k5E-Ne-4g4"/>
@@ -81,21 +119,19 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="StO-7G-z6C">
-                        <barButtonItem key="backBarButtonItem" title="назад" id="43v-Vd-MxP"/>
-                        <barButtonItem key="leftBarButtonItem" title="Camera" id="N1z-zU-rjf">
+                        <barButtonItem key="leftBarButtonItem" image="Camera Bar Button" id="N1z-zU-rjf">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="showCameracontroller:" destination="bQZ-W3-aUQ" id="8dA-EJ-7bx"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kyy-9V-NBK"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="addButton" destination="Kyy-9V-NBK" id="Xsr-TO-wc2"/>
                         <outlet property="backgroundImageView" destination="YRQ-2S-O89" id="Qwc-ig-RLx"/>
                         <outlet property="cameraButton" destination="N1z-zU-rjf" id="5td-RR-NVC"/>
                         <outlet property="photoCollectionView" destination="bhP-BZ-mum" id="jiH-Qk-oMT"/>
-                        <segue destination="651-qi-6Tt" kind="showDetail" identifier="goToEditSegue" id="zab-au-5MV"/>
+                        <outlet property="tabBarView" destination="Dha-0I-Yjw" id="RPk-Rc-0mI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DR6-CT-GAK" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -111,4 +147,10 @@
             <point key="canvasLocation" x="2610" y="593"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Camera Bar Button" width="32" height="25"/>
+        <image name="Filter Button" width="28" height="29"/>
+        <image name="Share Button" width="28" height="30"/>
+        <image name="Trash" width="21" height="28"/>
+    </resources>
 </document>
